force-app/main/default/objects/Volunteer_Change_Log__c/Volunteer_Change_Log__c.object-meta.xml
<CustomObject>
    <description>Holds the VolunteerId and PersonId combination.</description>
    <label>Volunteer Change Log</label>
    <nameField>
        <label>Volunteer Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>