force-app/main/default/objects/Volunteer_Change_Log__c/fields/Action_Code__c.field-meta.xml
<CustomField>
    <fullName>Action_Code__c</fullName>
    <label>Action Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>