force-app/main/default/objects/Volunteer_Change_Log__c/fields/From_Volunteer_Id__c.field-meta.xml
<CustomField>
    <fullName>From_Volunteer_Id__c</fullName>
    <label>From Volunteer Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>