force-app/main/default/objects/Volunteer_Change_Log__c/fields/Person_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Id__c</fullName>
    <label>Person Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>